Initial fix to Bug#35932 Falcon crashes in Transaction::commitNoUpdates for simple SELECT queries

Changed the failing assert so that it handles that the transition of the Transaction object from Active
to Available is not "atomic" when seen from a thread not having locked the transaction object.